--- a/HTML-CSS/HTML-CSS-Intro/tableaux.html
+++ b/HTML-CSS/HTML-CSS-Intro/tableaux.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
 
-        <h1 class="m-5">Tableaux</h1>
+        <h1 class="box">Tableaux</h1>
         <div class="container">
 
             <h2>TP 2</h2>
@@ -68,11 +68,12 @@
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center my-4">
-            <li class="page-item"><a class="page-link" href="index.html">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="page1.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="home.html">2</a></li>
-            <li class="page-item disabled"><a class="page-link" href="tableaux.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="formulaire.html">Next</a></li>
+			<li class="page-item "><a class="page-link" href="index.html">Sommaire</a></li>
+			<li class="page-item "><a class="page-link" href="page1.html">1</a></li>
+			<li class="page-item "><a class="page-link" href="home.html">2</a></li>
+			<li class="page-item disabled"><a class="page-link" href="tableaux.html">3</a></li>
+			<li class="page-item "><a class="page-link" href="formulaire.html">4</a></li>
+			<li class="page-item"><a class="page-link" href="tp5.html">5</a></li>
         </ul>
     </nav>
 
