--- a/HTML-CSS/HTML-CSS-Intro/index.html
+++ b/HTML-CSS/HTML-CSS-Intro/index.html
@@ -11,7 +11,7 @@
     <title>Ma page</title>
 </head>
 <body>
-    <h1 class="m-5">Introduction HTML</h1>
+    <h1 class="box">Introduction HTML</h1>
     <div class="container d-flex justify-content-center">
         <div class="justify-content-center">
             <h2>Sommaire</h2>
@@ -19,17 +19,19 @@
                 <li><a class="list-inline-item" href="page1.html">Balises texte et image</a></li>
                 <li><a href="home.html">TP 1 & 2</a></li>
                 <li><a href="tableaux.html">Tableaux</a></li>
-                <li><a href="formulaire.html">Formulaires</a></li>
+				<li><a href="formulaire.html">Formulaires</a></li>
+				<li><a href="tp5.html">TP 5 : Formulaire Bootstrap</a></li>
             </ul>
         </div>
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center my-4">
-            <li class="page-item disabled"><a class="page-link" href="#">Sommaire</a></li>
-            <li class="page-item"><a class="page-link" href="page1.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="home.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="tableaux.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="page1.html">Next</a></li>
+			<li class="page-item disabled"><a class="page-link" href="index.html">Sommaire</a></li>
+			<li class="page-item"><a class="page-link" href="page1.html">1</a></li>
+			<li class="page-item"><a class="page-link" href="home.html">2</a></li>
+			<li class="page-item"><a class="page-link" href="tableaux.html">3</a></li>
+			<li class="page-item "><a class="page-link" href="formulaire.html">4</a></li>
+			<li class="page-item"><a class="page-link" href="tp5.html">5</a></li>
         </ul>
     </nav>
 
