--- a/HTML-CSS/HTML-CSS-Intro/page1.html
+++ b/HTML-CSS/HTML-CSS-Intro/page1.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
 
-    <h1 class="m-5">Introduction HTML</h1>
+    <h1 class="box">Introduction HTML</h1>
 
     <h2>Partie 1</h2>
 
@@ -54,11 +54,12 @@ Aspernatur, iure quaerat? Explicabo quam reiciendis, magnam officia porro beatae
 
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center my-4">
-            <li class="page-item"><a class="page-link" href="index.html" >Sommaire</a></li>
-            <li class="page-item disabled"><a class="page-link" href="page1.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="home.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="tableaux.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="home.html">Next</a></li>
+			<li class="page-item "><a class="page-link" href="index.html">Sommaire</a></li>
+			<li class="page-item disabled"><a class="page-link" href="page1.html">1</a></li>
+			<li class="page-item"><a class="page-link" href="home.html">2</a></li>
+			<li class="page-item"><a class="page-link" href="tableaux.html">3</a></li>
+			<li class="page-item "><a class="page-link" href="formulaire.html">4</a></li>
+			<li class="page-item"><a class="page-link" href="tp5.html">5</a></li>
         </ul>
     </nav>
 
