--- a/HTML-CSS/HTML-CSS-Intro/tp5.html
+++ b/HTML-CSS/HTML-CSS-Intro/tp5.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    
+
     <title>Formulaire</title>
 </head>
 <body class="container-fluid">
 
-    <h1 class="m-5">Créer votre compte</h1>
+    <h1 class="box">Créer votre compte</h1>
 
     <div class="container form-style-5">
         <form class="form-control-lg was-validated">
-            <!-- 
+            <!--
                 - nom
                 - prenom
                 - email
@@ -29,14 +29,14 @@
                 <input class="form-control is-invalid" name="nom" id="nom" type="text" />
                 <div id="validationServerUsernameFeedback" class="invalid-feedback is-invalid">
                     Merci de saisir votre nom.
-                </div>                
+                </div>
             </div>
             <div class="form-control-lg my-2">
                 <label class="form-label" for="prenom">Prenom :</label>
                 <input class="form-control is-invalid" name="prenom" id="prenom" type="text" />
                 <div id="validationServerUsernameFeedback" class="invalid-feedback is-invalid">
                     Merci de saisir votre prénom.
-                </div>                
+                </div>
 
             </div>
             <div class="form-control-lg my-2">
@@ -107,7 +107,7 @@
                 <div class="form-check-inline">
                     <input class="form-check-input  is-invalid" name="active" id="non" type="radio" value="non"/>
                     <label class="">Non</label>
-                </div>  
+                </div>
             </div>
             <div class="form-control-lg my-2">
                 <label class="form-label" for="">Pays : </label>
@@ -126,14 +126,15 @@
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center my-4">
-            <li class="page-item"><a class="page-link" href="home.html">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="tableaux.html">3</a></li>
-            <li class="page-item "><a class="page-link" href="formulaire.html">4</a></li>
-            <li class="page-item disabled"><a class="page-link" href="tp5.html">5</a></li>
-            <li class="page-item disabled"><a class="page-link" href="tp5.html">Next</a></li>
+			<li class="page-item "><a class="page-link" href="index.html">Sommaire</a></li>
+			<li class="page-item "><a class="page-link" href="page1.html">1</a></li>
+			<li class="page-item "><a class="page-link" href="home.html">2</a></li>
+			<li class="page-item "><a class="page-link" href="tableaux.html">3</a></li>
+			<li class="page-item "><a class="page-link" href="formulaire.html">4</a></li>
+			<li class="page-item disabled"><a class="page-link" href="tp5.html">5</a></li>
         </ul>
     </nav>
 
 </body>
-        
+
 </html>
